RESOLVED FIXED150912
REGRESSION (r191499): 100% repro crash under _prepareForMoveToWindow:
https://bugs.webkit.org/show_bug.cgi?id=150912
Summary REGRESSION (r191499): 100% repro crash under _prepareForMoveToWindow:
Tim Horton
Reported 2015-11-04 16:57:10 PST
REGRESSION (r191499): 100% repro crash under _prepareForMoveToWindow:
Attachments
Patch (1.60 KB, patch)
2015-11-04 16:57 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-11-04 16:57:28 PST
Simon Fraser (smfr)
Comment 2 2015-11-04 16:59:24 PST
Comment on attachment 264828 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=264828&action=review > Source/WebKit2/ChangeLog:9 > + Reviewed by NOBODY (OOPS!). > + > + * UIProcess/API/mac/WKView.mm: Some text here please.
Tim Horton
Comment 3 2015-11-10 12:04:50 PST
Note You need to log in before you can comment on or make changes to this bug.