REGRESSION (r191499): 100% repro crash under _prepareForMoveToWindow: https://bugs.webkit.org/show_bug.cgi?id=150912 <rdar://problem/23402116>

Reviewed by Simon Fraser.

* UIProcess/API/mac/WKView.mm:
(-[WKView _prepareForMoveToWindow:withCompletionHandler:]):


Canonical link: https://commits.webkit.org/169128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192045 268f45cc-cd09-0410-ab3c-d52691b4dbfc